5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1646_2724.log
== SUBMITION (2019-04-15 19:47:54) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)
else:
	s=min(v)
print(s)
-- EXECUTION TIME:
0.235216
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:25) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)-min(v)
else:
	s=min(v) and max(v)
print(s)
-- OUTPUT:
753
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:33) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)-min(v)
else:
	s=min(v) and max(v)
print(s)
-- OUTPUT:
753
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:48:39) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)-min(v)
else:
	s=min(v) and max(v)
print(s)
-- EXECUTION TIME:
0.265984
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
753
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
44
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:46) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)-min(v)
else:
	s=min(v) 
print(s)
-- OUTPUT:
753
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:48:54) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)-min(v)
else:
	s=min(v) 
print(s)
-- EXECUTION TIME:
0.175043
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
753
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
44
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:49:53) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	print(s=max(v)-min(v))
else:
	print(max(s))
	print(min(s))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(s=max(v)-min(v))
TypeError: 's' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:20) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)-min(v)
	print(s)
else:
	print(max(s))
	print(min(s))
	
-- OUTPUT:
753
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:25) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)-min(v)
	print(s)
else:
	print(max(s))
	print(min(s))
	
-- OUTPUT:
753
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:50:33) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
if(v!=0):
	s=max(v)-min(v)
	print(s)
else:
	print(max(s))
	print(min(s))
	
-- EXECUTION TIME:
0.173964
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
753
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
44
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:51:52) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
d=max(v)
f=min(v)
s=f-d

if(v!=0):
	r=s
else:
	r=v
print(r)
	
-- OUTPUT:
-753
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:04) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
d=max(v)
f=min(v)
s=d-f

if(v!=0):
	r=s
else:
	r=v
print(r)
	
-- OUTPUT:
753
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:15) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
d=max(v)
f=min(v)
s=d-f

if(v!=0):
	r=s
else:
	r=v
print(r)
	
-- OUTPUT:
753
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:52:24) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
d=max(v)
f=min(v)
s=d-f

if(v!=0):
	r=s
else:
	r=v
print(r)
	
-- EXECUTION TIME:
0.237967
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
753
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
44
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:54:25) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
v=a,b,c
d=max(v)
f=min(v)
s=d-f
if(v==min(v)):
	r=v
else:
	r=v
print(r)
	
-- OUTPUT:
(258, 788, 35)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:43:10) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
s=a-b
if(s!=a-b):
	r=s
else:
	r=v
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r=v
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:43:31) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
s=a-b
if(s!=a-b):
	r=s
else:
	r=a
print(r)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:44:02) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
s=a-b
if(s==b):
	r=s
else:
	r=a
print(r)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:44:13) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
s=a-c
if(s==b):
	r=s
else:
	r=a
print(r)
	
-- EXECUTION TIME:
0.116446
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:44:14) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))
s=a-c
if(s==b):
	r=s
else:
	r=a
print(r)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:48:19) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))

d=min(a,b,c)
s=max(a,b,c)
m=(a+b+c)-d-s

if(m==b):
	r=m
else:
	r=m
print(r)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:48:30) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))

d=min(a,b,c)
s=max(a,b,c)
m=(a+b+c)-d-s

if(m==b):
	r=m
else:
	r=m
print(r)
	
-- EXECUTION TIME:
0.16547
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:48:44) 
-- CODE:
a=int(input("numeros 1:"))
b=int(input("numeros 2:"))
c=int(input("numeros 3:"))

d=min(a,b,c)
s=max(a,b,c)
m=(a+b+c)-d-s

if(m==b):
	r=m
else:
	r=m
print(r)
	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
